--- a/src/PiPlayer/Views/Shared/_Layout.cshtml
+++ b/src/PiPlayer/Views/Shared/_Layout.cshtml
@@ -71,11 +71,11 @@
                     PiPlayer
                 </a>
                 <div class="dropdown-menu dropdown-menu-right" aria-labelledby="userDropdown">
-                    <a class="dropdown-item" href="javascript:void(0);" onclick="status();"><i class="fas fa-fw fa-check"></i> &nbsp; 依赖检查</a>
+                    <a class="dropdown-item" href="javascript:void(0);" onclick="status();"><i class="fas fa-fw fa-check-double"></i> &nbsp; 依赖检查</a>
                     <a class="dropdown-item" href="javascript:void(0);" onclick="stop();"><i class="fas fa-fw fa-stop"></i> &nbsp; 停止播放</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="javascript:void(0);" onclick="refresh();"><i class="fas fa-fw fa-sign-out-alt"></i> &nbsp; 刷新</a>
-                    <a class="dropdown-item" href="javascript:void(0);" onclick="reboot();"><i class="fas fa-fw fa-sign-out-alt"></i> &nbsp; 重启系统</a>
+                    <a class="dropdown-item" href="javascript:void(0);" onclick="refresh();"><i class="fas fa-fw fa-circle-notch"></i> &nbsp; 刷新</a>
+                    <a class="dropdown-item" href="javascript:void(0);" onclick="reboot();"><i class="fas fa-fw fa-bolt"></i> &nbsp; 重启系统</a>
                     <a class="dropdown-item" href="javascript:void(0);" onclick="shutdown();"><i class="fas fa-fw fa-power-off"></i> &nbsp; 关闭系统</a>
                 </div>
             </li>
