fix: 新增设置;更新到.net9

--- a/src/PiPlayer/Views/Shared/_Layout.cshtml
+++ b/src/PiPlayer/Views/Shared/_Layout.cshtml
@@ -103,6 +103,12 @@
                 </a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="@Url.Action("Index","Setting")">
+                    <i class="fas fa-fw fa-sliders"></i>
+                    <span>设置</span>
+                </a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="@Url.Action("Index","Upload")">
                     <i class="fas fa-fw fa-upload"></i>
                     <span>上传</span>
