--- a/src/PiPlayer/Views/Shared/_Layout.cshtml
+++ b/src/PiPlayer/Views/Shared/_Layout.cshtml
@@ -102,12 +102,12 @@
                     <span>音频</span>
                 </a>
             </li>
-            <li class="nav-item">
+            @* <li class="nav-item">
                 <a class="nav-link" href="@Url.Action("Index","Setting")">
                     <i class="fas fa-fw fa-sliders"></i>
                     <span>设置</span>
                 </a>
-            </li>
+            </li> *@
             <li class="nav-item">
                 <a class="nav-link" href="@Url.Action("Index","Upload")">
                     <i class="fas fa-fw fa-upload"></i>
